--- a/qdx/index.html
+++ b/qdx/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE HTML>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title></title>
-</head>
-<body>
-	<h1>QDX is here</h1>
-	<p>QDX the white dragon horse from LocalsNake</p>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Dexin Qi's Page</title>
+		<link href="bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+	</head>
+
+	<body>
+		<div class="row page-header">
+			<div class="span3" name="portrait">
+				<a href="img/Portrait.JPG" class="thumbnail">
+					<img src="img/Portrait.JPG" alt="" />
+				</a>
+			</div>	
+			<div class="span9" name="header">
+				<h1>Dexin Qi
+					<small>MS Student major in 
+						<a href="http://www.cse.ucsd.edu/">CSE</a>
+						in 
+						<a href="http://www.ucsd.edu/">UCSD</a>
+					</small>
+				</h1>
+				<div class="row-fluid" name="header-info">
+					<div class="span4" name="header-info-part1">	
+						<table>
+							<tr>
+								<td>Email:</td>
+								<th>qdxaaa@gmail.com</th>
+							</tr>
+							<tr>
+								<td>Cell Phone:</td>
+								<th>(858)900-7779</th>
+							</tr>
+						</table>
+					</div>
+					<div class="span8" name="header-info-part2">
+						<table>
+							<tr>
+								<td>Address:</td>
+								<th>7770 Regents Road #113-220,San Diego,CA</th>
+							</tr>
+						</table>
+					</div>
+				</div>		
+			</div>	
+		</div>
+		<div class="container-fluid" name="content">
+			<div class="row-fluid show-grid">
+				<div class="span12">
+					<h2>span2</h2>
+				</div>
+			</div>
+	</div></body>
 </html>
