--- a/qdx/index.html
+++ b/qdx/index.html
@@ -18,8 +18,10 @@
 					<small>MS Student major in 
 						<a href="http://www.cse.ucsd.edu/">CSE</a>
 						in 
-						<a href="http://www.ucsd.edu/">UCSD</a>
+						<a href="http://www.ucsd.edu/">UC San Diego</a>
 					</small>
+					<!--<label for="">can be pronounced as [de'ʃin] for Dexin [tʃi]-->
+					<!--for qi</label>-->
 				</h1>
 				<div class="row-fluid" name="header-info">
 					<div class="span4" name="header-info-part1">	
@@ -48,7 +50,7 @@
 		<div class="container-fluid" name="content">
 			<div class="row-fluid show-grid">
 				<div class="span12">
-					<h2>span2</h2>
+					<h2>Under construction...</h2>
 				</div>
 			</div>
 	</div></body>
